# webook-fastapi

./: .env_sample  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  cloudrun.Dockerfile  conftest.py  pyproject.toml
backend/app/: initial_data.py  main.py
backend/app/api/api_v1/endpoints/: arrangement.py  auth.py  base.py  calendar.py  event.py  html_generator.py  ical.py  location.py  organization.py  outlook_events.py  person.py  room.py  service.py  users.py
backend/app/api/api_v1/endpoints/tests/: test_users.py
backend/app/api/api_v1/routers/: location.py
backend/app/arrangement/: crud.py  factory.py  models.py  schemas.py
backend/app/arrangement/model/: basemodels.py  choicemodels.py  linkmodels.py
backend/app/arrangement/schema/: arrangements.py  bussineshours.py  calendar.py  events.py  html_generator.py  organizations.py  persons.py  rooms.py  service.py  services.py
backend/app/arrangment/: models.py  schemas.py
backend/app/core/: auth.py  config.py  docs.py  ical.py  mixins.py  routes.py  security.py  session.py  utils.py
backend/app/graph/: graph_client_fab.py
backend/app/graph/client/: graph.py  response_parser.py
backend/app/graph/client/middleware/: auth.py  transport.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 1d3c7a21b2da_migrate_all_models_with_users.py  6c936912d5c1_initial_migration.py  91979b40eb38_create_users_locations_table.py
backend/app/templates/: item.html  login.html  register.html
backend/app/users/: auth.py  crud.py  models.py  schemas.py
backend/app/webapp/: forms.py  login_route.py
backend/app/webapp/templates/auth/: login.html
backend/app/webapp/templates/shared/: base.html
ci/: cloudbuild.yaml
nginx/: Dockerfile  nginx.conf
tests/: test_webook_fastapi.py
webook_fastapi/: env.sample.mac_or_linux  main.py  (+1 more)
(+2 files in other folders)
