[tool.poetry]
name = "webook-fastapi"
version = "0.1.0"
description = ""
authors = ["zmarusic <zeljkomarusic@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
